# writenfi

./: .gitignore  configure.ac
src/: Makefile.am  nand.c  nand.h  writenfi.c
